<resources>
    <string name="app_name">assignment1</string>
    <string name="logoStr">Chatify</string>
    <string name="fname">First Name </string>
    <string name="Lname">Last Name </string>
    <string name="email">Email Id</string>
    <string name="pass">Password </string>
    <string name="Cpass">Confirm Password </string>
    <string name="male">Male</string>
    <string name="Female">Female </string>
    <string name="signUpBtn">Sign Up</string>
    <string name="extBtn">Exit</string>
    <string name="title_activity_page2">page2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="oneFrag">One</string>
    <string name="twoFrag">Two</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>